compiler/frontend/parser/parser.cpp
#include "frontend/parser/parser.h"

#include <string>

namespace dao {

namespace {

class ParserImpl {
public:
  explicit ParserImpl(const std::vector<Token>& tokens) : tokens_(tokens) {
  }

  auto run() -> ParseResult {
    auto* file = parse_file();
    return {.context = std::move(ctx_), .file = file, .diagnostics = std::move(diagnostics_)};
  }

private:
  const std::vector<Token>& tokens_;
  uint32_t pos_ = 0;
  AstContext ctx_;
  std::vector<Diagnostic> diagnostics_;
  bool in_pipe_target_ = false;

  /// RAII guard that sets in_pipe_target_ to true for the scope's
  /// lifetime and restores the previous value on destruction.
  struct PipeTargetGuard {
    bool& flag;
    bool saved;
    explicit PipeTargetGuard(bool& f) : flag(f), saved(f) { flag = true; } // NOLINT(readability-identifier-length)
    ~PipeTargetGuard() { flag = saved; }
    PipeTargetGuard(const PipeTargetGuard&) = delete;
    auto operator=(const PipeTargetGuard&) -> PipeTargetGuard& = delete;
  };

  // -----------------------------------------------------------------------
  // Token access
  // -----------------------------------------------------------------------

  [[nodiscard]] auto peek() const -> const Token& {
    return tokens_[pos_];
  }

  [[nodiscard]] auto peek_kind() const -> TokenKind {
    return tokens_[pos_].kind;
  }

  [[nodiscard]] auto at_end() const -> bool {
    return peek_kind() == TokenKind::Eof;
  }

  auto advance() -> const Token& {
    const auto& tok = tokens_[pos_];
    if (!at_end()) {
      ++pos_;
    }
    return tok;
  }

  auto consume(TokenKind kind) -> const Token& {
    if (peek_kind() != kind) {
      expected(token_kind_name(kind));
    }
    return advance();
  }

  /// Report `expected <what>, got <the token here>`: the token's lexeme
  /// when it has one, else words for the layout tokens the lexer makes.
  void expected(std::string_view what) {
    const auto& tok = peek();
    std::string found;
    switch (tok.kind) {
    case TokenKind::Newline:
      found = "end of line";
      break;
    case TokenKind::Indent:
      found = "an indented block";
      break;
    case TokenKind::Dedent:
      found = "end of block";
      break;
    case TokenKind::Eof:
      found = "end of input";
      break;
    case TokenKind::Error:
      found = "an invalid token";
      break;
    default:
      found = "'" + std::string(tok.text) + "'";
      break;
    }
    error("expected " + std::string(what) + ", got " + found);
  }

  auto match(TokenKind kind) -> bool {
    if (peek_kind() == kind) {
      advance();
      return true;
    }
    return false;
  }

  void skip_newlines() {
    while (peek_kind() == TokenKind::Newline) {
      advance();
    }
  }

  void error(const std::string& message) {
    diagnostics_.push_back(Diagnostic::error(peek().span, message));
  }

  void error_at(Span span, const std::string& message) {
    diagnostics_.push_back(Diagnostic::error(span, message));
  }

  // -----------------------------------------------------------------------
  // Error recovery
  // -----------------------------------------------------------------------

  /// Skip tokens until a declaration keyword or EOF.
  void synchronize_to_declaration() {
    while (!at_end()) {
      switch (peek_kind()) {
      case TokenKind::KwFn:
      case TokenKind::KwClass:
      case TokenKind::KwConcept:
      case TokenKind::KwDerived:
      case TokenKind::KwExtend:
      case TokenKind::KwExtern:
      case TokenKind::KwType:
        return;
      case TokenKind::Dedent:
        return;
      default:
        advance();
      }
    }
  }

  /// Skip tokens until a statement boundary (NEWLINE, DEDENT, or EOF).
  void synchronize_to_statement() {
    while (!at_end()) {
      if (peek_kind() == TokenKind::Newline || peek_kind() == TokenKind::Dedent) {
        return;
      }
      advance();
    }
  }

  /// Create an error expression node at the current position.
  auto make_error_expr() -> Expr* {
    return ctx_.alloc<Expr>(peek().span, ErrorExprNode{});
  }

  /// Check whether an expression is null or an error recovery placeholder.
  static auto is_error_expr(const Expr* expr) -> bool {
    return expr == nullptr || expr->kind() == NodeKind::ErrorExpr;
  }

  /// Create an error statement node.
  auto make_error_stmt(Span span) -> Stmt* {
    return ctx_.alloc<Stmt>(span, ErrorStmtNode{});
  }

  /// Create an error declaration node.
  auto make_error_decl(Span span) -> Decl* {
    return ctx_.alloc<Decl>(span, ErrorDeclNode{});
  }

  // -----------------------------------------------------------------------
  // File
  // -----------------------------------------------------------------------

  auto parse_file() -> FileNode* {
    skip_newlines();
    Span file_span = peek().span;

    // CONTRACT_SYNTAX_SURFACE.md requires every source file to begin
    // with exactly one `module` declaration. Emit a diagnostic when
    // it is missing, but continue parsing so downstream tests and
    // tooling can still exercise the rest of the pipeline.
    ModuleNode* module_decl = nullptr;
    if (peek_kind() == TokenKind::KwModule) {
      module_decl = parse_module_decl();
      skip_newlines();
    } else {
      expected("'module' declaration at start of file");
    }

    std::vector<ImportNode*> imports;
    while (peek_kind() == TokenKind::KwImport) {
      imports.push_back(parse_import());
      skip_newlines();
    }

    std::vector<Decl*> declarations;
    while (!at_end()) {
      skip_newlines();
      if (at_end()) {
        break;
      }
      // A stray `module` after the leading position is a hard error per
      // CONTRACT_SYNTAX_SURFACE.md (exactly one, before everything else).
      if (peek_kind() == TokenKind::KwModule) {
        error("'module' declaration must appear only once, at the start of the file");
        advance(); // skip 'module' token
        while (peek_kind() == TokenKind::Identifier || peek_kind() == TokenKind::ColonColon) {
          advance();
        }
        skip_newlines();
        continue;
      }
      Span before = peek().span;
      auto* decl = parse_declaration();
      if (decl != nullptr) {
        declarations.push_back(decl);
      } else {
        // Recovery: insert an error placeholder and skip to next declaration keyword.
        synchronize_to_declaration();
        Span err_span = {.offset = before.offset, .length = peek().span.offset - before.offset};
        declarations.push_back(make_error_decl(err_span));
      }
      skip_newlines();
    }

    Span total = {.offset = file_span.offset, .length = peek().span.offset - file_span.offset};
    return ctx_.alloc<FileNode>(total, module_decl, std::move(imports), std::move(declarations));
  }

  // -----------------------------------------------------------------------
  // Module declaration
  // -----------------------------------------------------------------------

  auto parse_module_decl() -> ModuleNode* {
    const auto& kw = consume(TokenKind::KwModule); // NOLINT(readability-identifier-length)
    auto path = parse_module_path();
    consume(TokenKind::Newline);
    Span span = {.offset = kw.span.offset,
                 .length = (path.span.offset + path.span.length) - kw.span.offset};
    return ctx_.alloc<ModuleNode>(span, std::move(path));
  }

  // -----------------------------------------------------------------------
  // Import
  // -----------------------------------------------------------------------

  auto parse_import() -> ImportNode* {
    const auto& kw = consume(TokenKind::KwImport); // NOLINT(readability-identifier-length)
    auto path = parse_module_path();
    consume(TokenKind::Newline);
    Span span = {.offset = kw.span.offset,
                 .length = (path.span.offset + path.span.length) - kw.span.offset};
    return ctx_.alloc<ImportNode>(span, std::move(path));
  }

  auto parse_module_path() -> QualifiedPath {
    QualifiedPath path;
    const auto& first = consume(TokenKind::Identifier);
    path.segments.push_back(first.text);
    path.segment_spans.push_back(first.span);
    path.span = first.span;

    while (peek_kind() == TokenKind::ColonColon) {
      advance(); // ::
      const auto& seg = consume(TokenKind::Identifier);
      path.segments.push_back(seg.text);
      path.segment_spans.push_back(seg.span);
      path.span.length = (seg.span.offset + seg.span.length) - path.span.offset;
    }

    return path;
  }

  // -----------------------------------------------------------------------
  // Declarations
  // -----------------------------------------------------------------------

  auto parse_declaration() -> Decl* {
    switch (peek_kind()) {
    case TokenKind::KwExtern:
      return parse_extern_decl();
    case TokenKind::KwFn:
      return parse_function_decl(/*is_extern=*/false);
    case TokenKind::KwClass:
      return parse_class_decl();
    case TokenKind::KwEnum:
      return parse_enum_decl();
    case TokenKind::KwType:
      return parse_alias_decl();
    case TokenKind::KwConcept:
      return parse_concept_decl(/*is_derived=*/false);
    case TokenKind::KwDerived:
      return parse_concept_decl(/*is_derived=*/true);
    case TokenKind::KwExtend:
      return parse_extend_decl();
    default:
      // Migration diagnostic: 'struct' was renamed to 'class'.
      if (peek_kind() == TokenKind::Identifier && peek().text == "struct") {
        error("'struct' has been renamed to 'class'");
        // Recover by parsing as a class declaration.
        advance(); // consume 'struct' identifier
        const auto& name_tok = consume(TokenKind::Identifier);
        consume(TokenKind::Colon);
        auto fields = parse_field_list();
        Span span = span_from(peek().span);
        return ctx_.alloc<Decl>(span,
                                ClassDecl{.name = name_tok.text,
                                          .name_span = name_tok.span,
                                          .type_params = {},
                                          .fields = std::move(fields),
                                          .conformances = {},
                                          .denials = {}});
      }
      expected("declaration (fn, extern, class, enum, concept, extend, or type)");
      advance(); // skip problematic token
      return nullptr;
    }
  }

  auto parse_extern_decl() -> Decl* {
    advance(); // consume 'extern'
    if (peek_kind() != TokenKind::KwFn) {
      expected("'fn' after 'extern'");
      return nullptr;
    }
    return parse_function_decl(/*is_extern=*/true);
  }

  auto parse_type_params() -> std::vector<GenericParam> {
    std::vector<GenericParam> params;
    if (peek_kind() != TokenKind::Lt) {
      return params;
    }
    advance(); // <

    auto parse_one = [&]() -> GenericParam {
      const auto& name_tok = consume(TokenKind::Identifier);
      GenericParam param{.name = name_tok.text, .name_span = name_tok.span};
      if (peek_kind() == TokenKind::Colon) {
        advance(); // :
        param.constraints.push_back(parse_type());
        while (peek_kind() == TokenKind::Plus) {
          advance(); // +
          param.constraints.push_back(parse_type());
        }
      }
      return param;
    };

    params.push_back(parse_one());
    while (peek_kind() == TokenKind::Comma) {
      advance(); // ,
      params.push_back(parse_one());
    }
    consume(TokenKind::Gt);
    return params;
  }

  auto parse_function_decl(bool is_extern) -> Decl* {
    const auto& kw = consume(TokenKind::KwFn); // NOLINT(readability-identifier-length)
    const auto& name_tok = consume(TokenKind::Identifier);

    auto type_params = parse_type_params();

    consume(TokenKind::LParen);
    auto params = parse_params();
    consume(TokenKind::RParen);

    TypeNode* return_type = nullptr;
    if (peek_kind() == TokenKind::Colon) {
      advance(); // :
      return_type = parse_type();
    }

    std::vector<Stmt*> body;
    Expr* expr_body = nullptr;

    if (is_extern) {
      // Extern declarations: signature only, no body.
      if (return_type == nullptr) {
        error("extern function declaration requires a return type");
      }
      consume(TokenKind::Newline);
    } else if (peek_kind() == TokenKind::Arrow) {
      // Expression-bodied: -> expression NEWLINE
      advance(); // ->
      expr_body = parse_expression();
      // The trailing newline may have been consumed by pipe continuation.
      match(TokenKind::Newline);
    } else {
      // Consume the newline after the signature.
      consume(TokenKind::Newline);

      if (peek_kind() == TokenKind::Indent) {
        // Block-bodied: INDENT statement+ DEDENT
        advance(); // consume Indent
        body = parse_statement_list();
        consume(TokenKind::Dedent);
      } else {
        // Non-extern function without a body is an error.
        expected("function body (indented block or -> expression)");
      }
    }

    Span span = span_from(kw.span);
    return ctx_.alloc<Decl>(span,
                            FunctionDecl{.name = name_tok.text,
                                         .name_span = name_tok.span,
                                         .type_params = std::move(type_params),
                                         .params = std::move(params),
                                         .return_type = return_type,
                                         .body = std::move(body),
                                         .expr_body = expr_body,
                                         .is_extern = is_extern});
  }

  auto parse_params() -> std::vector<Param> {
    std::vector<Param> params;
    if (peek_kind() == TokenKind::RParen) {
      return params;
    }
    params.push_back(parse_param());
    while (peek_kind() == TokenKind::Comma) {
      advance(); // ,
      params.push_back(parse_param());
    }
    return params;
  }

  auto parse_param() -> Param {
    // Accept `self` (reserved keyword) as a parameter name.
    const Token* name_tok = nullptr;
    if (peek_kind() == TokenKind::KwSelf) {
      name_tok = &advance();
    } else {
      name_tok = &consume(TokenKind::Identifier);
    }

    // `self` without `: type` is a bare receiver; type resolved later.
    if (name_tok->text == "self" && peek_kind() != TokenKind::Colon) {
      return {.name = name_tok->text, .name_span = name_tok->span, .type = nullptr};
    }

    consume(TokenKind::Colon);
    auto* type = parse_type();
    return {.name = name_tok->text, .name_span = name_tok->span, .type = type};
  }

  auto parse_class_decl() -> Decl* {
    const auto& kw = consume(TokenKind::KwClass); // NOLINT(readability-identifier-length)
    const auto& name_tok = consume(TokenKind::Identifier);
    auto type_params = parse_type_params();
    consume(TokenKind::Colon);
    auto body = parse_class_body();
    Span span = span_from(kw.span);
    return ctx_.alloc<Decl>(span,
                            ClassDecl{.name = name_tok.text,
                                      .name_span = name_tok.span,
                                      .type_params = std::move(type_params),
                                      .fields = std::move(body.fields),
                                      .methods = std::move(body.methods),
                                      .conformances = std::move(body.conformances),
                                      .denials = std::move(body.denials)});
  }

  struct ClassBody {
    std::vector<FieldSpec*> fields;
    std::vector<Decl*> methods;
    std::vector<ConformanceBlock> conformances;
    std::vector<DenySpec> denials;
  };

  // NOLINTNEXTLINE(readability-function-cognitive-complexity)
  auto parse_class_body() -> ClassBody {
    consume(TokenKind::Newline);
    consume(TokenKind::Indent);
    ClassBody body;
    while (peek_kind() != TokenKind::Dedent && peek_kind() != TokenKind::Eof) {
      if (peek_kind() == TokenKind::KwAs) {
        body.conformances.push_back(parse_conformance_block());
      } else if (peek_kind() == TokenKind::KwDeny) {
        body.denials.push_back(parse_deny_spec());
      } else if (peek_kind() == TokenKind::KwFn) {
        body.methods.push_back(parse_method_decl());
      } else {
        body.fields.push_back(parse_field_spec());
      }
    }
    consume(TokenKind::Dedent);
    if (body.fields.empty() && body.conformances.empty()) {
      error("class body must contain at least one field");
    }
    return body;
  }

  auto parse_enum_decl() -> Decl* {
    const auto& kw = consume(TokenKind::KwEnum); // NOLINT(readability-identifier-length)

    // Check for 'class' keyword after 'enum' -> enum class
    bool is_enum_class = false;
    if (peek_kind() == TokenKind::KwClass) {
      advance();
      is_enum_class = true;
    }

    const auto& name_tok = consume(TokenKind::Identifier);
    auto type_params = parse_type_params();
    consume(TokenKind::Colon);
    consume(TokenKind::Newline);
    consume(TokenKind::Indent);
    std::vector<EnumVariantSpec> variants;
    while (peek_kind() != TokenKind::Dedent && peek_kind() != TokenKind::Eof) {
      skip_newlines();
      if (peek_kind() == TokenKind::Dedent || peek_kind() == TokenKind::Eof) {
        break;
      }
      if (peek_kind() != TokenKind::Identifier) {
        expected("variant name in enum body");
        advance();
        continue;
      }
      const auto& variant_tok = consume(TokenKind::Identifier);
      std::vector<TypeNode*> payload_types;
      std::vector<std::string_view> field_names;
      std::vector<Span> field_name_spans;
      if (peek_kind() == TokenKind::LParen) {
        advance(); // consume '('
        if (peek_kind() != TokenKind::RParen) {
          if (is_enum_class) {
            // Named fields: name: Type, name: Type, ...
            do {
              const auto& field_tok = consume(TokenKind::Identifier);
              field_names.push_back(field_tok.text);
              field_name_spans.push_back(field_tok.span);
              consume(TokenKind::Colon);
              payload_types.push_back(parse_type());
            } while (peek_kind() == TokenKind::Comma && (advance(), true));
          } else {
            // Plain enum: payloads are an error
            error("enum variants cannot carry payloads; use 'enum class' "
                  "for structured variants");
            // Still parse for recovery
            payload_types.push_back(parse_type());
            while (peek_kind() == TokenKind::Comma) {
              advance(); // consume ','
              payload_types.push_back(parse_type());
            }
          }
        }
        consume(TokenKind::RParen);
      }
      variants.push_back({.name = variant_tok.text,
                          .name_span = variant_tok.span,
                          .payload_types = std::move(payload_types),
                          .field_names = std::move(field_names),
                          .field_name_spans = std::move(field_name_spans)});
      if (peek_kind() == TokenKind::Newline) {
        advance();
      }
    }
    consume(TokenKind::Dedent);
    if (variants.empty()) {
      error("enum must contain at least one variant");
    }
    Span span = span_from(kw.span);
    return ctx_.alloc<Decl>(span,
                            EnumDeclNode{.name = name_tok.text,
                                         .name_span = name_tok.span,
                                         .type_params = std::move(type_params),
                                         .variants = std::move(variants),
                                         .is_enum_class = is_enum_class});
  }

  /// The concept named by a conformance position: `Concept`, or
  /// `b::Concept` through an import binding (CONTRACT_MODULE_SYSTEM.md
  /// §6).  Shared by `as`, `deny`, and `extend ... as`.
  auto parse_conformance_target() -> ConformanceTarget {
    const auto& first = consume(TokenKind::Identifier);
    if (peek_kind() != TokenKind::ColonColon) {
      return {.concept_name = first.text, .concept_span = first.span};
    }
    advance(); // ::
    const auto& concept_tok = consume(TokenKind::Identifier);
    return {.module_binding = first.text,
            .binding_span = first.span,
            .concept_name = concept_tok.text,
            .concept_span = concept_tok.span};
  }

  auto parse_conformance_block() -> ConformanceBlock {
    advance(); // consume 'as'
    auto target = parse_conformance_target();
    consume(TokenKind::Colon);
    auto methods = parse_method_list();
    return {.target = target, .methods = std::move(methods)};
  }

  auto parse_deny_spec() -> DenySpec {
    advance(); // consume 'deny'
    auto target = parse_conformance_target();
    consume(TokenKind::Newline);
    return {.target = target};
  }

  auto parse_method_list() -> std::vector<Decl*> {
    consume(TokenKind::Newline);
    consume(TokenKind::Indent);
    std::vector<Decl*> methods;
    while (peek_kind() != TokenKind::Dedent && peek_kind() != TokenKind::Eof) {
      skip_newlines();
      if (peek_kind() == TokenKind::Dedent || peek_kind() == TokenKind::Eof) {
        break;
      }
      if (peek_kind() != TokenKind::KwFn) {
        expected("'fn' in method list");
        advance();
        continue;
      }
      methods.push_back(parse_method_decl());
    }
    consume(TokenKind::Dedent);
    return methods;
  }

  auto parse_method_decl() -> Decl* {
    // Like parse_function_decl but allows bare signatures (no body).
    const auto& kw = consume(TokenKind::KwFn); // NOLINT(readability-identifier-length)
    const auto& name_tok = consume(TokenKind::Identifier);

    auto method_type_params = parse_type_params();

    consume(TokenKind::LParen);
    auto params = parse_params();
    consume(TokenKind::RParen);

    TypeNode* return_type = nullptr;
    if (peek_kind() == TokenKind::Colon) {
      advance(); // :
      return_type = parse_type();
    }

    std::vector<Stmt*> fn_body;
    Expr* expr_body = nullptr;

    if (peek_kind() == TokenKind::Arrow) {
      // Expression-bodied default method.
      advance(); // ->
      expr_body = parse_expression();
      match(TokenKind::Newline);
    } else if (peek_kind() == TokenKind::Newline) {
      consume(TokenKind::Newline);
      if (peek_kind() == TokenKind::Indent) {
        // Block-bodied default method.
        advance(); // consume Indent
        fn_body = parse_statement_list();
        consume(TokenKind::Dedent);
      }
      // else: bare signature (required method) — no body is fine.
    }

    Span span = span_from(kw.span);
    return ctx_.alloc<Decl>(span,
                            FunctionDecl{.name = name_tok.text,
                                         .name_span = name_tok.span,
                                         .type_params = std::move(method_type_params),
                                         .params = std::move(params),
                                         .return_type = return_type,
                                         .body = std::move(fn_body),
                                         .expr_body = expr_body,
                                         .is_extern = false});
  }

  auto parse_field_list() -> std::vector<FieldSpec*> {
    consume(TokenKind::Newline);
    consume(TokenKind::Indent);
    std::vector<FieldSpec*> fields;
    while (peek_kind() != TokenKind::Dedent && peek_kind() != TokenKind::Eof) {
      fields.push_back(parse_field_spec());
    }
    consume(TokenKind::Dedent);
    if (fields.empty()) {
      error("class body must contain at least one field");
    }
    return fields;
  }

  auto parse_field_spec() -> FieldSpec* {
    const auto& name_tok = consume(TokenKind::Identifier);
    consume(TokenKind::Colon);
    auto* type = parse_type();
    consume(TokenKind::Newline);
    Span span = span_from(name_tok.span);
    return ctx_.alloc<FieldSpec>(span, name_tok.text, name_tok.span, type);
  }

  auto parse_alias_decl() -> Decl* {
    const auto& kw = consume(TokenKind::KwType); // NOLINT(readability-identifier-length)
    const auto& name_tok = consume(TokenKind::Identifier);
    consume(TokenKind::Eq);
    auto* type = parse_type();
    consume(TokenKind::Newline);
    Span span = span_from(kw.span);
    return ctx_.alloc<Decl>(
        span, AliasDecl{.name = name_tok.text, .name_span = name_tok.span, .type = type});
  }

  auto parse_concept_decl(bool is_derived) -> Decl* {
    const auto kw = is_derived ? advance() : peek(); // NOLINT(readability-identifier-length)
    if (is_derived) {
      consume(TokenKind::KwConcept);
    } else {
      advance(); // consume 'concept'
    }
    const auto& name_tok = consume(TokenKind::Identifier);
    auto type_params = parse_type_params();
    consume(TokenKind::Colon);
    auto methods = parse_method_list();
    Span span = span_from(kw.span);
    return ctx_.alloc<Decl>(span,
                            ConceptDecl{.name = name_tok.text,
                                        .name_span = name_tok.span,
                                        .type_params = std::move(type_params),
                                        .methods = std::move(methods),
                                        .is_derived = is_derived});
  }

  auto parse_extend_decl() -> Decl* {
    const auto& kw = advance(); // NOLINT(readability-identifier-length) consume 'extend'
    auto* target_type = parse_type();
    consume(TokenKind::KwAs);
    auto target = parse_conformance_target();
    consume(TokenKind::Colon);
    auto methods = parse_method_list();
    Span span = span_from(kw.span);
    return ctx_.alloc<Decl>(
        span,
        ExtendDecl{.target_type = target_type, .target = target, .methods = std::move(methods)});
  }

  // -----------------------------------------------------------------------
  // Suites and statements
  // -----------------------------------------------------------------------

  auto parse_suite() -> std::vector<Stmt*> {
    consume(TokenKind::Newline);
    consume(TokenKind::Indent);
    auto stmts = parse_statement_list();
    consume(TokenKind::Dedent);
    return stmts;
  }

  auto parse_statement_list() -> std::vector<Stmt*> {
    std::vector<Stmt*> stmts;
    while (peek_kind() != TokenKind::Dedent && peek_kind() != TokenKind::Eof) {
      skip_newlines();
      if (peek_kind() == TokenKind::Dedent || peek_kind() == TokenKind::Eof) {
        break;
      }
      Span before = peek().span;
      auto* stmt = parse_statement();
      if (stmt != nullptr) {
        stmts.push_back(stmt);
      } else {
        // Recovery: insert an error placeholder and skip to next statement boundary.
        synchronize_to_statement();
        Span err_span = {.offset = before.offset, .length = peek().span.offset - before.offset};
        stmts.push_back(make_error_stmt(err_span));
      }
    }
    return stmts;
  }

  // NOLINTNEXTLINE(readability-function-cognitive-complexity)
  auto parse_statement() -> Stmt* {
    switch (peek_kind()) {
    case TokenKind::KwLet:
      return parse_let_statement();
    case TokenKind::KwIf:
      return parse_if_statement();
    case TokenKind::KwWhile:
      return parse_while_statement();
    case TokenKind::KwFor:
      return parse_for_statement();
    case TokenKind::KwMatch:
      return parse_match_statement();
    case TokenKind::KwMode:
      return parse_mode_block();
    case TokenKind::KwResource:
      return parse_resource_block();
    case TokenKind::KwReturn:
      return parse_return_statement();
    case TokenKind::KwYield:
      return parse_yield_statement();
    case TokenKind::KwBreak: {
      const auto& kw = advance(); // NOLINT(readability-identifier-length)
      return ctx_.alloc<Stmt>(kw.span, BreakStmtNode{});
    }
    default:
      break;
    }

    // Expression or assignment.  An error expression was reported where
    // it was parsed (a pointer sigil among them: `*p = 42`), so the
    // statement ends here, before the assignment-target check below
    // could report it a second time.
    auto* expr = parse_expression();
    if (expr == nullptr || expr->kind() == NodeKind::ErrorExpr) {
      return nullptr;
    }

    // Check for assignment: expr = expr
    if (peek_kind() == TokenKind::Eq) {
      // Validate LHS is a legal assignment target.
      // A pointer is written with `p.set(v)`, never through an assignment.
      const bool valid_target = expr->kind() == NodeKind::Identifier ||
                                expr->kind() == NodeKind::FieldExpr ||
                                expr->kind() == NodeKind::IndexExpr;
      if (!valid_target) {
        error("invalid assignment target");
      }
      advance(); // =
      auto* value = parse_expression();
      if (is_error_expr(value)) {
        match(TokenKind::Newline);
        return make_error_stmt(span_from(expr->span));
      }
      // Trailing newline may have been consumed by pipe continuation.
      match(TokenKind::Newline);
      Span span = {.offset = expr->span.offset,
                   .length = (value->span.offset + value->span.length) - expr->span.offset};
      return ctx_.alloc<Stmt>(span, Assignment{.target = expr, .value = value});
    }

    // Trailing newline may have been consumed by pipe continuation.
    match(TokenKind::Newline);
    return ctx_.alloc<Stmt>(expr->span, ExpressionStatement{expr});
  }

  auto parse_let_statement() -> Stmt* {
    const auto& kw = consume(TokenKind::KwLet); // NOLINT(readability-identifier-length)
    const auto& name_tok = consume(TokenKind::Identifier);

    TypeNode* type = nullptr;
    Expr* init = nullptr;

    if (peek_kind() == TokenKind::Colon) {
      advance(); // :
      type = parse_type();
      if (peek_kind() == TokenKind::Eq) {
        advance(); // =
        init = parse_expression();
      }
    } else if (peek_kind() == TokenKind::Eq) {
      advance(); // =
      init = parse_expression();
    } else {
      expected("':' or '=' after let binding name");
    }

    // If the initializer is an error placeholder, promote the whole
    // statement to an error so downstream passes never see it.
    // Note: init == nullptr is valid (e.g. `let x: i32`), so only
    // check when init was actually parsed but came back as an error.
    if (init != nullptr && init->kind() == NodeKind::ErrorExpr) {
      match(TokenKind::Newline);
      return make_error_stmt(span_from(kw.span));
    }

    // Trailing newline may have been consumed by pipe continuation.
    match(TokenKind::Newline);
    Span span = span_from(kw.span);
    return ctx_.alloc<Stmt>(
        span,
        LetStatement{
            .name = name_tok.text, .name_span = name_tok.span, .type = type, .initializer = init});
  }

  auto parse_if_statement() -> Stmt* {
    const auto& kw = consume(TokenKind::KwIf); // NOLINT(readability-identifier-length)
    auto* condition = parse_expression();
    if (is_error_expr(condition)) {
      synchronize_to_statement();
      return make_error_stmt(span_from(kw.span));
    }
    consume(TokenKind::Colon);
    auto then_body = parse_suite();

    std::vector<Stmt*> else_body;
    if (peek_kind() == TokenKind::KwElse) {
      advance(); // else
      if (peek_kind() == TokenKind::KwIf) {
        // else if — parse as a nested if-statement in the else body.
        else_body.push_back(parse_if_statement());
      } else {
        consume(TokenKind::Colon);
        else_body = parse_suite();
      }
    }

    Span span = span_from(kw.span);
    return ctx_.alloc<Stmt>(span,
                            IfStatement{.condition = condition,
                                        .then_body = std::move(then_body),
                                        .else_body = std::move(else_body)});
  }

  /// Try to rewrite a CallExpr pattern as a destructuring pattern.
  /// Returns true if the pattern was rewritten: *pattern is replaced
  /// with the callee, bindings/binding_spans are filled, and has_rest
  /// is set if a `..` rest marker was present.
  static auto try_destructure_pattern(Expr*& pattern,
                                      std::vector<std::string_view>& bindings,
                                      std::vector<Span>& binding_spans,
                                      bool& has_rest) -> bool {
    if (!pattern->is<CallExpr>()) {
      return false;
    }
    const auto& call = pattern->as<CallExpr>();
    if (!call.callee->is<FieldExpr>() && !call.callee->is<QualifiedName>()) {
      return false;
    }
    // All args must be simple identifiers for destructuring.
    for (const auto* arg : call.args) {
      if (!arg->is<IdentifierExpr>()) {
        return false;
      }
    }
    // Check for `..` rest marker in arg_names.
    bool trailing_rest = false;
    for (const auto& arg_name : call.arg_names) {
      if (arg_name.data() != nullptr && arg_name == "..") {
        trailing_rest = true;
      }
    }
    if (call.args.empty() && !trailing_rest) {
      return false;
    }
    for (const auto* arg : call.args) {
      const auto& ident = arg->as<IdentifierExpr>();
      bindings.push_back(ident.name);
      binding_spans.push_back(arg->span);
    }
    has_rest = trailing_rest;
    pattern = call.callee;
    return true;
  }
